-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Aggregation Framework
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
v8.0, v7.0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The previous fix SERVER-89930 only checks if the densifying field equals to 'partitionByFields'. In AF-969, the problematic pipeline has the densifying field nested in 'partitionByFields'. For example:
{
"$densify": {
"field": "_id.date",
"partitionByFields": [
"_id"
],
},
The fix to update the uassert to apply the same check as 5733306 does.