SERVER-95545 Validates if densifying field is nested in partitionByFields (#27858)

GitOrigin-RevId: dcd65ffa8e7f8a1ba46cbd1983affbd477b56e71