jstests/aggregation/sources/densify/libs/parse_util.js
@@ -47,7 +47,22 @@ export let parseUtil = (function(db, coll, stageName, options = {}) {
                     {field: "a", partitionByFields: ["a"], range: {step: 1.0, bounds: "full"}}
             }),
             8993000,
-            "BSON field '$densify.partitionByFields' contains the field that is being desified");
+            "BSON field '$densify.partitionByFields' contains the field that is being densified");
+        assert.commandFailedWithCode(
+            run({
+                [stageName]:
+                    {field: "a.b", partitionByFields: ["a"], range: {step: 1.0, bounds: "full"}}
+            }),
+            9554500,
+            "The field that is being densified contains the BSON field '$densify.partitionByFields'");
+        assert.commandFailedWithCode(
+            run({
+                [stageName]:
+                    {field: "a", partitionByFields: ["a.b"], range: {step: 1.0, bounds: "full"}}
+            }),
+            8993000,
+            "BSON field '$densify.partitionByFields' contains the field that is being densified");
+
         assert.commandFailedWithCode(
             run({
                 [stageName]: {
